# quiz

./: readme.md
client/: .gitignore  index.html  package.json  vite.config.ts
client/public/: index.html  manifest.json
client/src/: index.css  main.tsx
client/src/components/: topbar.tsx
client/src/routes/: index.tsx
client/src/storage/: config.ts  index.ts
server/: .gitignore  Cargo.toml
server/src/: env.rs  libraries.rs  main.rs  middlewares.rs  routes.rs
server/src/libraries/: mongodb.rs  redis.rs
server/src/middlewares/: jwt.rs  telegram.rs
server/src/routes/: auth.rs  index.rs  play.rs  quiz.rs  user.rs
server/src/routes/auth/: google.rs
server/src/routes/quiz/: quiz_id.rs
