[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log", "std"] }
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
actix-web = "4.10.2"
dotenvy = "0.15.7"
serde_json = "1.0.138"
futures = "0.3.31"
chrono = "0.4.40"
once_cell = "1.21.1"
mongodb = "3.2.2"
actix-cors = "0.7.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
jsonwebtoken = "9.3.1"
time = "0.3.37"
actix = "0.13.5"
redis = { version = "0.29.2", features = ["tokio-comp", "cluster"] }
actix-web-actors = "4.3.1"
rand = "0.9.0"
sha2 = "0.10.8"
actix-rt = "2.10.0"
